<resources>
    <string name="app_name">HW03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bac_screen_title">BAC Calculator Fragment</string>
    <string name="set_weight_screen_title">Set Weight/Gender Fragment</string>
    <string name="add_drinks_screen_title">Add Drink Fragment</string>
    <string name="view_drinks_screen">View Drinks Fragment</string>
    <string name="weight_label">Weight: </string>
    <string name="default_weight_label">N/A</string>
    <string name="set_weight_label">Set</string>
    <string name="cancel_label">Cancel</string>
    <string name="view_drinks">View Drinks</string>
    <string name="add_drinks">Add Drinks</string>
    <string name="reset_label">Reset</string>
    <string name="status_label">Your Status:</string>
    <string name="safe_label">You\'re safe</string>
    <string name="careful_label">Be careful</string>
    <string name="over_limit_label">Over the limit!</string>
    <string name="num_drinks_label"># Drinks: </string>
    <string name="bac_level_label">BAC Level: </string>
    <string name="default_bac_level">0.000</string>
    <string name="enter_weight_hint">Enter weight</string>
    <string name="weight_lbs_label">Weight (lbs):</string>
    <string name="female_label">Female</string>
    <string name="male_label">Male</string>
    <string name="gender_label">Gender: </string>
    <string name="drink_size_label">Drink Size:</string>
    <string name="oz1_label">1 oz</string>
    <string name="oz5_label">5 oz</string>
    <string name="oz12_label">12 oz</string>
    <string name="alc_pct_label">Alcohol %:</string>
    <string name="default_alc_seekvalue">30%</string>
    <string name="add_one_drink">Add Drink</string>
    <string name="viewDrinksDrinkLabel">Drink</string>
    <string name="view_drink_out_of">out of</string>
    <string name="view_drink_added">Added </string>
    <string name="delete_desciption">Delete Drink</string>
</resources>