<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".AddDrinkFragment">

    <Button
        android:id="@+id/buttonAddDrink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/add_one_drink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toTopOf="@+id/buttonCancelAddDrink" />

    <TextView
        android:id="@+id/alcPctValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/default_alc_seekvalue"
        app:layout_constraintBottom_toBottomOf="@+id/alcoholPctLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alcoholPctLabel" />

    <SeekBar
        android:id="@+id/alcoholPctSeekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="30"
        android:progress="30"
        app:layout_constraintBottom_toBottomOf="@+id/alcoholPctLabel"
        app:layout_constraintEnd_toStartOf="@+id/alcPctValue"
        app:layout_constraintStart_toEndOf="@+id/alcoholPctLabel"
        app:layout_constraintTop_toTopOf="@+id/alcoholPctLabel" />

    <TextView
        android:id="@+id/alcoholPctLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/alc_pct_label"
        app:layout_constraintStart_toStartOf="@+id/drinkSizeLabel"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/drinkSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/drink_size_label"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/drinkSizeLabel"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio1Oz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/oz1_label" />

        <RadioButton
            android:id="@+id/radio5Oz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oz5_label" />

        <RadioButton
            android:id="@+id/radio12Oz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oz12_label" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancelAddDrink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel_label"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="@+id/alcoholPctLabel"
        app:layout_constraintTop_toBottomOf="@+id/alcoholPctSeekbar" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAddDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCancelAddDrink" />

</androidx.constraintlayout.widget.ConstraintLayout>