<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".SetProfileFragment">

    <Button
        android:id="@+id/buttonSetWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/set_weight_label"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toTopOf="@+id/buttonCancel" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel_label"
        app:layout_constraintEnd_toStartOf="@+id/space2"
        app:layout_constraintStart_toStartOf="@+id/genderLabel"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/genderLabel"
        app:layout_constraintStart_toEndOf="@+id/genderLabel"
        app:layout_constraintTop_toTopOf="@+id/genderLabel">

        <RadioButton
            android:id="@+id/femaleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/female_label" />

        <RadioButton
            android:id="@+id/maleRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_label" />

    </RadioGroup>

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gender_label"
        app:layout_constraintStart_toStartOf="@+id/weightLbsLabel"
        app:layout_constraintTop_toBottomOf="@+id/editWeightLbs" />

    <EditText
        android:id="@+id/editWeightLbs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_weight_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weightLbsLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weightLbsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/weight_lbs_label"
        app:layout_constraintBottom_toBottomOf="@+id/editWeightLbs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editWeightLbs" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSetWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>